--- a/bubble-duck-client/src/styles/main.css
+++ b/bubble-duck-client/src/styles/main.css
@@ -17,3 +17,9 @@ h1 {
   margin-top: 50px;
 }
 
+h3 {
+  font-family: 'Sniglet', sans-serif;
+  font-weight: 700;
+  font-size: x-large;
+  margin-top: 10px;
+}
