general UI updates and code cleanup

--- a/bubble-duck-client/src/styles/components.css
+++ b/bubble-duck-client/src/styles/components.css
@@ -113,7 +113,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
-  margin-top: 10px; /* Additional spacing if needed */
+  margin-top: 10px; 
   margin-left: 20px;
 }
 
@@ -241,6 +241,12 @@
   background-color: hsl(336, 60%, 85%);
 }
 
+.selectPhotoButton:disabled {
+  background-color: #ccc;
+  color: #666;
+  cursor: default;
+}
+
 .formContainer {
   display: flex;
   flex-direction: column;
@@ -258,6 +264,7 @@
   max-width: 500px;
   max-height: 500px;
   margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .loadingContainer {
@@ -352,12 +359,10 @@
 } 
 
 .editResponseContainer textarea {
-  width: 600px;
-  height: 80%;
+  width: inherit;
+  height: inherit;
   resize: none;
-  padding: 12px 20px;
-  border: 2px solid #ccc;
-  border-radius: 4px;
+  border-style: none;
   background-color: #ffffff;
   font-size: 16px;
   font-family: 'PlusJakartaSans', sans-serif;
@@ -386,10 +391,10 @@
 }
 
 .textContainer {
-  background-color: #ffffff; /* White background for the text area */
-  border: 1px solid #ccc; /* Optional: adds a border around the text area */
-  border-radius: 4px; /* Optional: rounds the corners of the text area */
-  padding: 10px; /* Spacing inside the text area */
+  background-color: #ffffff; 
+  border: 1px solid #cccccc; 
+  border-radius: 4px;
+  padding: 10px; 
   display: flex;
   align-items: center; /* Aligns text and icon vertically */
   width: 100%;
@@ -412,6 +417,10 @@
   display: flex;
   align-self: center;
 } 
+
+.faCheck {
+  color: #9BB982;
+}
 
 
 /* DISPLAY RESPONSE CONTENT  */
@@ -464,7 +473,7 @@
 .productsDisplayContainer {
   display: flex;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
   gap: 30px;
 }
 
@@ -508,7 +517,11 @@
   font-size: 16px;
   font-weight: bold;
   text-decoration: underline;
-  margin-bottom: 10px; /* Space between type label and product details */
+  margin-bottom: 5px; /* Space between type label and product details */
+}
+
+.productBrandSubheader {
+  font-style: italic;
 }
 
 .currentProductDescription {
@@ -518,13 +531,13 @@
 
 .removeProductButton {
   background: none; /* Removes default background */
-  color: #8a8a8a; /* Inherits the color from its parent */
+  color: #8a8a8a;
   border: none; /* Removes the default border */
   padding: 0; /* Removes default padding */
   font: inherit; /* Inherits the font from its parent */
   font-size: 12px;
-  cursor: pointer; /* Changes the cursor to a pointer to indicate it's clickable */
-  outline: inherit; /* Removes the default focus outline and inherits from its parent (you might want to customize focus styles for accessibility) */
+  cursor: pointer; /
+  outline: inherit; /* Removes the default focus outline and inherits from its parent  */
 }
 
 .productDescriptionButton {
@@ -688,13 +701,6 @@
 }
 
 /* SCHEDULE PAGE */
-.schedulePageContainer {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  padding: 20px;
-}
-
 .confettiContainer {
   position: absolute;
   top: 0;
@@ -702,6 +708,20 @@
   width: 100%;
   height: 100%;
   z-index: 1;
+}
+
+.scheduleHeader {
+  z-index: 2;
+  margin-bottom: -10px;
+}
+
+.schedulePageContainer {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
 }
 
 .routineContainer {
